src/main/kotlin/com/example/kweb/error/model/ErrorResponse.kt
package com.example.kweb.error.model

data class ErrorResponse(
    val name: String,
    val message: String?
)
